--- a/StockManagementApp/css/main.css
+++ b/StockManagementApp/css/main.css
@@ -249,7 +249,7 @@ ul.social-share li a:hover {
   border-radius: 0;
   margin-bottom: 0;
   background: #151515;
-  /*padding: 5px 0;*/
+  padding: 5px 0;
   padding-bottom: 0;
 }
 
